--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,10 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/Inter/Inter-VariableFont_opsz,wght.ttf') format('truetype');
-  font-weight: 400; /* Regular */
+  font-weight: 100 900; 
   font-style: normal;
-  font-display: swap; /* Verbessert das Laden auf langsamen Verbindungen */
+  src: url('/fonts/Inter/Inter-VariableFont_opsz,wght.ttf') format('truetype-variations');
+  font-display: swap; 
 }
 
 :root {
