--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @theme {
   --color-custom-darkblue: #0c2461;
   --color-custom-red: rgb(231,0,53); /* tricor red */
-  --color-custom-orange: #fa983a;
+  --color-custom-black: #2d3436; /* us pallete */
   --color-custom-white: #f5f6fa;
   --color-custom-grey: #7f8fa6;
 }
@@ -130,4 +130,10 @@ h1, h2, button {
   -moz-transform: rotate(-135deg);
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg);
+}
+
+@media (prefers-color-scheme: dark) {
+    section, section > div {
+        background: var(--color-custom-black);  
+    }
 }
