--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@
   --color-custom-red: rgb(231,0,53); /* tricor red */
   --color-custom-black: #2d3436; /* us pallete */
   --color-custom-white: #f5f6fa;
-  --color-custom-grey: #7f8fa6;
+  --color-custom-grey: #636e72; /* us */
+ 
 }
+
 
 @font-face {
   font-family: 'Poppins';
