--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
 @theme {
   --color-custom-darkblue: #0c2461;
   --color-custom-red: rgb(231,0,53); /* tricor red */
+  --color-custom-red-op: rgb(231,0,53, 0.1);
   --color-custom-black: #2d3436; /* us pallete */
   --color-custom-white: #f5f6fa;
   --color-custom-grey: #636e72; /* us */
- 
+  --color-custom-purple: #00E7B2; /* us */
 }
-
 
 @font-face {
   font-family: 'Poppins';
@@ -104,7 +104,7 @@ p, h1, h2, h3 {
   -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
-  background-color: var(--color-custom-grey);
+  background-color: var(--color-custom-black) ; 
 }
 
 .burgermenu > span:nth-child(1) {
